--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,3 @@
 PORT =4001
-MongoDBURI ="mongodb+srv://sambhajikunnurkar2002:wnbxbJmM3Oi4vGEz@cluster0.1dfqh.mongodb.net/bookStore"
+# MongoDBURI ="mongodb+srv://sambhajikunnurkar2002:wnbxbJmM3Oi4vGEz@cluster0.1dfqh.mongodb.net/bookStore"
+MongoDBURI ="mongodb+srv://sambhajikunnurkar2002:bookstore@book.mf7pe.mongodb.net/bookStore"
